fixed sticky footer not overlapping content

--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -2,7 +2,7 @@ html{margin:0;
   padding:0;}
 
 body{ padding: 0;
-   margin: 0;
+   margin: 0 0 200px 0;
    border:0;
   background-color: #0df80d;}
 
